--- a/training.ipynb
+++ b/training.ipynb
@@ -21,49 +21,124 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Shape:0\", shape=(None,), dtype=int32)\n"
-     ]
-    },
-    {
-     "ename": "InvalidArgumentError",
-     "evalue": "{{function_node __wrapped__IteratorGetNext_output_types_2_device_/job:localhost/replica:0/task:0/device:CPU:0}} input image must be of non-zero size\n\t [[{{node resize/ResizeBilinear}}]] [Op:IteratorGetNext]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m batch_size \u001b[39m=\u001b[39m \u001b[39m5\u001b[39m\n\u001b[1;32m      4\u001b[0m train_ds \u001b[39m=\u001b[39m train_file_ds\u001b[39m.\u001b[39mmap(preprocess_with_resized_mel)\u001b[39m#.batch(batch_size)\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[39mfor\u001b[39;00m x, sampling_rate, label \u001b[39min\u001b[39;00m train_ds\u001b[39m.\u001b[39mtake(\u001b[39m1\u001b[39m):\n\u001b[1;32m      7\u001b[0m     \u001b[39mprint\u001b[39m(x\u001b[39m.\u001b[39mshape)\n\u001b[1;32m      8\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mData shape: \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m - Sampling rate: \u001b[39m\u001b[39m{\u001b[39;00msampling_rate\u001b[39m.\u001b[39mnumpy()\u001b[39m}\u001b[39;00m\u001b[39m - Label: \u001b[39m\u001b[39m{\u001b[39;00mlabel\u001b[39m.\u001b[39mnumpy()\u001b[39m.\u001b[39mdecode()\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m) \u001b[39m# se non .batch c'è .decode()\u001b[39;00m\n",
-      "File \u001b[0;32m~/ml4iotenv/lib/python3.8/site-packages/tensorflow/python/data/ops/iterator_ops.py:787\u001b[0m, in \u001b[0;36mOwnedIterator.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    785\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__next__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    786\u001b[0m   \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 787\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_internal()\n\u001b[1;32m    788\u001b[0m   \u001b[39mexcept\u001b[39;00m errors\u001b[39m.\u001b[39mOutOfRangeError:\n\u001b[1;32m    789\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m\n",
-      "File \u001b[0;32m~/ml4iotenv/lib/python3.8/site-packages/tensorflow/python/data/ops/iterator_ops.py:770\u001b[0m, in \u001b[0;36mOwnedIterator._next_internal\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    767\u001b[0m \u001b[39m# TODO(b/77291417): This runs in sync mode as iterators use an error status\u001b[39;00m\n\u001b[1;32m    768\u001b[0m \u001b[39m# to communicate that there is no more data to iterate over.\u001b[39;00m\n\u001b[1;32m    769\u001b[0m \u001b[39mwith\u001b[39;00m context\u001b[39m.\u001b[39mexecution_mode(context\u001b[39m.\u001b[39mSYNC):\n\u001b[0;32m--> 770\u001b[0m   ret \u001b[39m=\u001b[39m gen_dataset_ops\u001b[39m.\u001b[39;49miterator_get_next(\n\u001b[1;32m    771\u001b[0m       \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_iterator_resource,\n\u001b[1;32m    772\u001b[0m       output_types\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_flat_output_types,\n\u001b[1;32m    773\u001b[0m       output_shapes\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_flat_output_shapes)\n\u001b[1;32m    775\u001b[0m   \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    776\u001b[0m     \u001b[39m# Fast path for the case `self._structure` is not a nested structure.\u001b[39;00m\n\u001b[1;32m    777\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_element_spec\u001b[39m.\u001b[39m_from_compatible_tensor_list(ret)  \u001b[39m# pylint: disable=protected-access\u001b[39;00m\n",
-      "File \u001b[0;32m~/ml4iotenv/lib/python3.8/site-packages/tensorflow/python/ops/gen_dataset_ops.py:3017\u001b[0m, in \u001b[0;36miterator_get_next\u001b[0;34m(iterator, output_types, output_shapes, name)\u001b[0m\n\u001b[1;32m   3015\u001b[0m   \u001b[39mreturn\u001b[39;00m _result\n\u001b[1;32m   3016\u001b[0m \u001b[39mexcept\u001b[39;00m _core\u001b[39m.\u001b[39m_NotOkStatusException \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m-> 3017\u001b[0m   _ops\u001b[39m.\u001b[39;49mraise_from_not_ok_status(e, name)\n\u001b[1;32m   3018\u001b[0m \u001b[39mexcept\u001b[39;00m _core\u001b[39m.\u001b[39m_FallbackException:\n\u001b[1;32m   3019\u001b[0m   \u001b[39mpass\u001b[39;00m\n",
-      "File \u001b[0;32m~/ml4iotenv/lib/python3.8/site-packages/tensorflow/python/framework/ops.py:7215\u001b[0m, in \u001b[0;36mraise_from_not_ok_status\u001b[0;34m(e, name)\u001b[0m\n\u001b[1;32m   7213\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mraise_from_not_ok_status\u001b[39m(e, name):\n\u001b[1;32m   7214\u001b[0m   e\u001b[39m.\u001b[39mmessage \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39m name: \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m name \u001b[39mif\u001b[39;00m name \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m-> 7215\u001b[0m   \u001b[39mraise\u001b[39;00m core\u001b[39m.\u001b[39m_status_to_exception(e) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n",
-      "\u001b[0;31mInvalidArgumentError\u001b[0m: {{function_node __wrapped__IteratorGetNext_output_types_2_device_/job:localhost/replica:0/task:0/device:CPU:0}} input image must be of non-zero size\n\t [[{{node resize/ResizeBilinear}}]] [Op:IteratorGetNext]"
+      "(5, 32, 32, 1)\n",
+      "tf.Tensor([2 2 2 1 2], shape=(5,), dtype=int64)\n"
      ]
     }
    ],
    "source": [
     "train_file_ds = tf.data.Dataset.list_files(['complete_training_data/*.wav'])\n",
+    "validation_file_ds = tf.data.Dataset.list_files(['complete_validation_data/*.wav'])\n",
+    "\n",
     "batch_size = 5\n",
     "\n",
-    "train_ds = train_file_ds.map(preprocess_with_resized_mel)#.batch(batch_size)\n",
+    "train_mel_ds = train_file_ds.map(get_log_mel_spectrogram)\n",
+    "for spectrogram, label in train_mel_ds.take(1):\n",
+    "    SHAPE = spectrogram.shape\n",
     "\n",
-    "for x, sampling_rate, label in train_ds.take(1):\n",
-    "    print(x.shape)\n",
-    "    print(f'Data shape: {x.shape} - Sampling rate: {sampling_rate.numpy()} - Label: {label.numpy().decode()}') # se non .batch c'è .decode()"
+    "def preprocess_with_resized_mel(filename):\n",
+    "    log_mel_spectrogram, label = get_log_mel_spectrogram(filename)\n",
+    "    log_mel_spectrogram.set_shape(SHAPE)\n",
+    "    mfccs = tf.signal.mfccs_from_log_mel_spectrograms(log_mel_spectrogram)[..., :]\n",
+    "    mfccs = tf.expand_dims(mfccs, -1)\n",
+    "    mfccs = tf.image.resize(mfccs, [32, 32])\n",
+    "    label_id = tf.argmax(label == LABELS)\n",
+    "\n",
+    "    return mfccs, label_id\n",
+    "\n",
+    "# train_file_ds = tf.data.Dataset.list_files([\"complete_training_data/*.wav\"])\n",
+    "train_ds = train_file_ds.map(preprocess_with_resized_mel).batch(batch_size)\n",
+    "validation_ds = validation_file_ds.map(preprocess_with_resized_mel).batch(batch_size)\n",
+    "\n",
+    "for example_batch, example_labels in train_ds.take(1):\n",
+    "    print(example_batch.shape)\n",
+    "    print(example_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Input(shape=example_batch.shape[1:]),\n",
+    "    tf.keras.layers.Conv2D(filters=128, kernel_size=[3, 3], strides=[2, 2],\n",
+    "        use_bias=False, padding='valid'),\n",
+    "    tf.keras.layers.BatchNormalization(),\n",
+    "    tf.keras.layers.ReLU(),\n",
+    "    tf.keras.layers.Conv2D(filters=128, kernel_size=[3, 3], strides=[1, 1],\n",
+    "        use_bias=False, padding='same'),\n",
+    "    tf.keras.layers.BatchNormalization(),\n",
+    "    tf.keras.layers.ReLU(),\n",
+    "    tf.keras.layers.Conv2D(filters=128, kernel_size=[3, 3], strides=[1, 1],\n",
+    "        use_bias=False, padding='same'),\n",
+    "    tf.keras.layers.BatchNormalization(),\n",
+    "    tf.keras.layers.ReLU(),\n",
+    "    tf.keras.layers.GlobalAveragePooling2D(),\n",
+    "    tf.keras.layers.Dense(units=len(LABELS)),\n",
+    "    tf.keras.layers.Softmax()\n",
+    "    ])\n",
+    "\n",
+    "loss = tf.losses.SparseCategoricalCrossentropy(from_logits=False)\n",
+    "optimizer = tf.optimizers.Adam(learning_rate=1e-5)\n",
+    "metrics = [tf.metrics.SparseCategoricalAccuracy()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "75/75 [==============================] - 32s 402ms/step - loss: 1.0833 - sparse_categorical_accuracy: 0.4305 - val_loss: 1.1762 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "Epoch 2/5\n",
+      "75/75 [==============================] - 30s 396ms/step - loss: 0.9963 - sparse_categorical_accuracy: 0.4305 - val_loss: 1.2376 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "Epoch 3/5\n",
+      "75/75 [==============================] - 30s 396ms/step - loss: 0.9686 - sparse_categorical_accuracy: 0.4358 - val_loss: 1.2933 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "Epoch 4/5\n",
+      "75/75 [==============================] - 34s 457ms/step - loss: 0.9550 - sparse_categorical_accuracy: 0.5000 - val_loss: 1.3348 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "Epoch 5/5\n",
+      "75/75 [==============================] - 30s 401ms/step - loss: 0.9438 - sparse_categorical_accuracy: 0.5428 - val_loss: 1.3796 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "6/6 [==============================] - 3s 445ms/step - loss: 1.3796 - sparse_categorical_accuracy: 0.0000e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(loss=loss, optimizer=optimizer, metrics=metrics)\n",
+    "history = model.fit(train_ds, epochs=5, validation_data=validation_ds)\n",
+    "test_loss, test_accuracy = model.evaluate(validation_ds)"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "ml4iotenv",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "26573a9fad40d086beb2339af52d84c427e9bce5fee7d856f858bff4ce858c27"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
