--- a/rnn_test.ipynb
+++ b/rnn_test.ipynb
@@ -312,7 +312,7 @@
     "            val_loss, \\\n",
     "                val_accuracy = utilities.get_model_statistics(history = history)\n",
     "\n",
-    "    MODEL_NAME, ZIPPED_MODEL_NAME = utilities.convert_zip_save_model(model_for_pruning=model_for_pruning, idx=idx)\n",
+    "    MODEL_NAME, ZIPPED_MODEL_NAME = utilities.convert_zip_save_model(model_for_pruning=model_for_pruning, idx=idx, network_type=\"cnn\")\n",
     "\n",
     "    # performing inference\n",
     "    interpreter = tf.lite.Interpreter(model_path=f'tflite_models/{MODEL_NAME}.tflite')\n",
@@ -369,7 +369,8 @@
     "            {config['lower_frequency']},{config['upper_frequency']},\\\n",
     "                {config['batch_size']},{config['epochs']},{config['initial_learning_rate']},\\\n",
     "                    {config['end_learning_rate']},{config['num_mfccs_features']},\\\n",
-    "                        {config['alpha']},{100 * accuracy:.3f},{1000 * avg_preprocessing_latency:.1f},\\\n",
+    "                        {config['alpha']},{config['num_hidden_layers']},\\\n",
+    "                            {100 * accuracy:.3f},{1000 * avg_preprocessing_latency:.1f},\\\n",
     "                            {1000 * avg_model_latency:.1f},{1000 * median_total_latency:.1f},\\\n",
     "                                {model_size / 2 ** 10:.1f},{compressed_model_size / 2 ** 10:.1f},{idx}\\n\"\n",
     "\n",
