--- a/cnn_test.ipynb
+++ b/cnn_test.ipynb
@@ -9,11 +9,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-27 18:50:30.380185: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-04-27 18:50:30.407909: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-04-27 18:50:31.004684: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-04-27 18:50:31.004760: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-04-27 18:50:31.004768: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-04-27 20:16:26.210358: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-04-27 20:16:26.233355: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-04-27 20:16:26.897007: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-04-27 20:16:26.897061: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-04-27 20:16:26.897068: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -86,9 +86,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/399 [00:00<?, ?it/s]/home/sbenghus/Desktop/quaroniSMS/preprocessing.py:191: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
+      "  0%|          | 0/399 [00:00<?, ?it/s]/home/sbenghus/Desktop/quaroniSMS/preprocessing.py:117: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
       "  input_audiofile = siw.read(audio_path)\n",
-      "100%|██████████| 399/399 [00:01<00:00, 295.33it/s]\n"
+      "100%|██████████| 399/399 [00:02<00:00, 181.17it/s]\n"
      ]
     }
    ],
@@ -177,8 +177,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-27 18:50:35.563944: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2023-04-27 18:50:35.563968: W tensorflow/stream_executor/cuda/cuda_driver.cc:263] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2023-04-27 20:16:32.460752: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2023-04-27 20:16:32.460952: W tensorflow/stream_executor/cuda/cuda_driver.cc:263] failed call to cuInit: UNKNOWN ERROR (303)\n",
       "  0%|          | 0/1 [00:00<?, ?it/s]"
      ]
     },
@@ -188,38 +188,17 @@
      "text": [
       "Using configuration: \n",
       " {'alpha': 0.15, 'batch_size': 5, 'end_learning_rate': 1e-05, 'epochs': 5, 'frame_length_in_s': 0.04, 'frame_step_in_s': 0.02, 'initial_learning_rate': 0.01, 'lower_frequency': 1000, 'num_hidden_layers': 5, 'num_mel_bins': 20, 'num_mfccs_features': -1, 'upper_frequency': 7000}\n",
-      "<unknown>\n",
-      "<unknown>\n",
-      "<unknown>\n",
       "(5, 32, 32, 1)\n",
-      "tf.Tensor([1 1 1 2 2], shape=(5,), dtype=int64)\n",
+      "tf.Tensor([2 2 1 1 2], shape=(5,), dtype=int64)\n",
       "Epoch 1/5\n",
-      " 1/69 [..............................] - ETA: 4:53 - loss: 1.1651 - sparse_categorical_accuracy: 0.0000e+00"
+      " 4/69 [>.............................] - ETA: 1:08 - loss: 1.2495 - sparse_categorical_accuracy: 0.1500"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-27 18:50:43.843454: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 26316900 exceeds 10% of free system memory.\n",
-      "2023-04-27 18:50:43.843526: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 26316900 exceeds 10% of free system memory.\n",
-      "2023-04-27 18:50:43.844465: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 26316900 exceeds 10% of free system memory.\n",
-      "2023-04-27 18:50:43.844492: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 26316900 exceeds 10% of free system memory.\n",
-      "2023-04-27 18:50:43.844984: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 26316900 exceeds 10% of free system memory.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 6/69 [=>............................] - ETA: 1:09 - loss: 1.0450 - sparse_categorical_accuracy: 0.4000"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/1 [00:14<?, ?it/s]\n"
+      "  0%|          | 0/1 [00:13<?, ?it/s]\n"
      ]
     },
     {
@@ -319,7 +298,7 @@
     "            val_loss, \\\n",
     "                val_accuracy = utilities.get_model_statistics(history = history)\n",
     "\n",
-    "    MODEL_NAME, ZIPPED_MODEL_NAME = utilities.convert_zip_save_model(model_for_pruning=model_for_pruning, idx=idx)\n",
+    "    MODEL_NAME, ZIPPED_MODEL_NAME = utilities.convert_zip_save_model(model_for_pruning=model_for_pruning, idx=idx, network_type=\"cnn\")\n",
     "\n",
     "    # performing inference\n",
     "    interpreter = tf.lite.Interpreter(model_path=f'tflite_models/{MODEL_NAME}.tflite')\n",
@@ -376,7 +355,8 @@
     "            {config['lower_frequency']},{config['upper_frequency']},\\\n",
     "                {config['batch_size']},{config['epochs']},{config['initial_learning_rate']},\\\n",
     "                    {config['end_learning_rate']},{config['num_mfccs_features']},\\\n",
-    "                        {config['alpha']},{100 * accuracy:.3f},{1000 * avg_preprocessing_latency:.1f},\\\n",
+    "                        {config['alpha']},{config['num_hidden_layers']},\\\n",
+    "                            {100 * accuracy:.3f},{1000 * avg_preprocessing_latency:.1f},\\\n",
     "                            {1000 * avg_model_latency:.1f},{1000 * median_total_latency:.1f},\\\n",
     "                                {model_size / 2 ** 10:.1f},{compressed_model_size / 2 ** 10:.1f},{idx}\\n\"\n",
     "\n",
