PIPELINE COMPLETATA, BELLA RAGA CI VEDIAMO, AND JUSTICE FOR ALL

--- a/cnn_test.ipynb
+++ b/cnn_test.ipynb
@@ -298,7 +298,7 @@
     "            val_loss, \\\n",
     "                val_accuracy = utilities.get_model_statistics(history = history)\n",
     "\n",
-    "    MODEL_NAME, ZIPPED_MODEL_NAME = utilities.convert_zip_save_model(model_for_pruning=model_for_pruning, idx=idx, network_type=\"cnn\")\n",
+    "    MODEL_NAME, ZIPPED_MODEL_NAME = utilities.convert_zip_save_model(model=model_for_pruning, idx=idx, network_type=\"cnn\")\n",
     "\n",
     "    # performing inference\n",
     "    interpreter = tf.lite.Interpreter(model_path=f'tflite_models/{MODEL_NAME}.tflite')\n",
