--- a/rnn_test.ipynb
+++ b/rnn_test.ipynb
@@ -242,7 +242,7 @@
     "         \"median_total_latency\", \"model_size\", \"compressed_model_size\", \"model_id\"\n",
     "         ])\n",
     "\n",
-    "utilities._log_header_to_csv(filename=f\"{strategy}_lstm_results.csv\", header=header)\n",
+    "utilities._log_header_to_csv(filename=f\"{strategy}_rnn_results.csv\", header=header)\n",
     "\n",
     "train_file_ds = tf.data.Dataset.list_files(['complete_training_data/*.wav'])\n",
     "validation_file_ds = tf.data.Dataset.list_files(['complete_validation_data/*.wav'])\n",
@@ -312,7 +312,7 @@
     "            val_loss, \\\n",
     "                val_accuracy = utilities.get_model_statistics(history = history)\n",
     "\n",
-    "    MODEL_NAME, ZIPPED_MODEL_NAME = utilities.convert_zip_save_model(model_for_pruning=model_for_pruning, idx=idx, network_type=\"cnn\")\n",
+    "    MODEL_NAME, ZIPPED_MODEL_NAME = utilities.convert_zip_save_model(model=model_for_pruning, idx=idx, network_type=\"rnn\")\n",
     "\n",
     "    # performing inference\n",
     "    interpreter = tf.lite.Interpreter(model_path=f'tflite_models/{MODEL_NAME}.tflite')\n",
@@ -374,7 +374,7 @@
     "                            {1000 * avg_model_latency:.1f},{1000 * median_total_latency:.1f},\\\n",
     "                                {model_size / 2 ** 10:.1f},{compressed_model_size / 2 ** 10:.1f},{idx}\\n\"\n",
     "\n",
-    "    utilities._log_output_to_csv(filename=f\"{strategy}_lstm_results.csv\", content=content)"
+    "    utilities._log_output_to_csv(filename=f\"{strategy}_rnn_results.csv\", content=content)"
    ]
   },
   {
